# pynasapower

./: .gitignore  .readthedocs.yaml  NASAMeteoDataTool.py  NASA_Meteo_Data_Tool.py  README.md  helping_functions.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python_package.yml
docs/: README.md  conf.py  index.rst  installation.rst  modules.rst  pynasapower.rst  quickstart.rst  requirements-docs.txt
examples/: run.py
pyNASAPower/: __init__.py  helping_functions.py  pyNASAPower.py
pynasapower/: geometry.py  get_data.py
tests/: .~lock.PCSE_meteorological_data.xls#  PCSE_meteorological_data.xls  meteorological_data.xls  test_01.py  test_geometry.py  test_get_data.py
tests/data/: POWER_Point_Climatology_Climatology_2020_2022_037d98N_023d73E_UTC.csv  POWER_Point_Climatology_Climatology_2020_2022_037d98N_023d73E_UTC_variables.txt  POWER_Point_Daily_20220101_20220201_037d98N_023d73E_LST.csv  POWER_Point_Daily_20220101_20220201_037d98N_023d73E_LST.txt  POWER_Point_Daily_20220101_20220201_037d98N_023d73E_LST_variables.txt  POWER_Point_Monthly_20220101_20221231_037d98N_023d73E_UTC.csv  POWER_Point_Monthly_20220101_20221231_037d98N_023d73E_UTC_variables.txt  POWER_Regional_Monthly_20220101_20221231_037d00N_039d00N_023d00E_025d00E_UTC.json  POWER_Regional_Monthly_20220101_20221231_037d00N_039d00N_023d00E_025d00E_UTC.nc
